# TinyStoriesTinker

./: .gitignore  CLAUDE.md  LICENSE  TINYSTORIES_RECIPE.md  generate.py  pyproject.toml  train.py  transformer.py  truncate_gpt2_tokenizer.py
